# browserarena

./: .gitignore  README.md  pyproject.toml  requirements.txt
FastChat/: .gitignore  api_endpoint.json  browser_use_test.py  requirements.txt  topic_modelling.py
FastChat/fastchat/: utils.py
FastChat/fastchat/model/: model_registry.py
FastChat/fastchat/serve/: browser_use_functions.py  call_browsers_script.py  gradio_block_arena_anony.py  gradio_block_arena_named.py  gradio_block_arena_vision_anony.py  gradio_web_server.py  gradio_web_server_multi.py
FastChat/fastchat/serve/monitor/: basic_stats.py  clean_battle_data.py  elo_analysis.py
FastChat/logs/: dummy.txt
FastChat/systematic_prompts_and_outputs/: dummy_json_output.json
browser-use/browser_use/: logging_utils.py
browser-use/browser_use/agent/: gif.py  service.py
browser-use/browser_use/agent/memory/: service.py
browser-use/browser_use/agent/message_manager/: service.py  utils.py
browser-use/browser_use/browser/: browser.py  context.py
browser-use/browser_use/controller/: service.py
logs/: .gitkeep
